# Language_project

./: .env.example  .flake8  .gitignore  .isort.cfg  Makefile  manage.py  mypy.ini  pyproject.toml  words.csv
Language_Project/: asgi.py  settings.py  swagger_settings.py  urls.py  wordsimport.csv  wsgi.py
profiles/: forms.py  models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/templates/profiles/: user_profile.html
word_importer/: apps.py  urls.py  views.py
word_importer/management/commands/: wordimport.py
