[tool.poetry]
name = "language-project"
version = "0.1.0"
description = ""
authors = ["terror53421 <urarubanenko@gmail.com>"]
readme = "README.md"
packages = [{include = "language_project"}]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
django = "^4.2.3"
django-environ = "^0.10.0"
isort = "^5.12.0"
psycopg2 = "^2.9.6"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
drf-yasg = "^1.21.7"
flake8 = "^6.1.0"
mypy-extensions = "^1.0.0"
black = "^23.9.1"
gedit = "^0.0.2"
django-allauth = "^0.56.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipdb = "^0.13.13"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
   | \.hg
   | \.mypy_cache
   | \.tox
   | \.venv
   | _build
   | buck-out
   | build
   | dist
   | migrations
)/
'''

[tool.isort]
line_length = 100
profile = "black"
known_third_party = ["django", "rest_framework"]
skip = ["migrations"]
